name:               plclub
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.12.*
		  , temporary == 1.3.*
		  , directory == 1.3.*
		  , process == 1.6.*
		  , filepath == 1.4.*
		  , pandoc-types == 1.17.*
		  , pandoc == 2.2.*
		  , text
  ghc-options:      -threaded
  default-language: Haskell2010
