name:               plclub
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10


library
    exposed-modules:      PLClub
                        , PLClub.Publications
                        , PLClub.HakyllExtra
                        , PLClub.PandocExtra
    hs-source-dirs:     lib
    default-language: Haskell2010
    build-depends:      base == 4.*
                      , hakyll == 4.16.*
                      , hakyll-alectryon == 0.1.*
                      , split == 0.2.*
                      , containers == 0.6.*
                      , temporary == 1.3.*
                      , directory == 1.3.*
                      , process == 1.6.*
                      , filepath == 1.4.*
                      , pandoc-types == 1.23.*
                      , skylighting == 0.14.*
                      , pandoc == 3.3.*
                      , text == 2.1.*

executable site
    main-is:          Main.hs
    hs-source-dirs:     bin
    ghc-options:      -threaded
    build-depends:       base    == 4.*
                       , plclub
    default-language: Haskell2010
